--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "guide_webserver_class",
   "version": "1.0.0",
   "description": "Guide",
-  "main": "index.js",
+  "main": "",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
+    "gm": "^1.23.1",
     "jsonwebtoken": "^8.3.0",
+    "morgan": "^1.9.0",
     "mysql2": "^1.5.3",
     "nodemon": "^1.17.5"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "nodemon /api/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
